--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileCreate.razor
@@ -1,10 +1,12 @@
 ﻿@page "/tax-profile/create"
 @using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.Application.TaxProfiles.Commands
+@using TaxCalculator.Domain.Services.Identifier
 @using TaxCalculator.WebFrontend.Models
 
 @inject WebApi _webApi;
 @inject NavigationManager _navigationManager;
+@inject IIdentifierService _identifierService;
 
 <div>
     <div>
@@ -52,9 +54,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var currency = await _webApi.GetOneAsync<Currency>("Currency");
-
-        _currencies = currency.GetType().GetProperties().ToDictionary(x => (Guid)x.GetValue(currency), x => x.Name);
+        _currencies = _identifierService.Currencies.ToDictionary();
     }
     
     private async Task HandleSubmitAsync()
