add tax configuration

--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -55,7 +55,7 @@
         <div style="margin-top: 20px">
             <div style="display: flex; justify-content: space-between;">
                 <h5>Taxes configurations</h5>
-                <NavLink href="#" class="btn btn-primary">Add tax configuration</NavLink>
+                <NavLink href="@("tax/create/" + ProfileId)" class="btn btn-primary">Add tax configuration</NavLink>
             </div>
             <div>
                 <table class="table">
