move tax edit to component

--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -3,7 +3,7 @@
 @using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.Domain.Entities
 @using TaxCalculator.Domain.Services.Identifier
-@using Currency = TaxCalculator.WebFrontend.Models.Currency
+@using TaxCalculator.WebFrontend.Pages.Taxes
 
 @inject WebApi _webApi;
 @inject NavigationManager _navigationManager;
@@ -52,38 +52,7 @@
                 </div>
             </EditForm>
         </div>
-        <div style="margin-top: 20px">
-            <div style="display: flex; justify-content: space-between;">
-                <h5>Taxes configurations</h5>
-                <NavLink href="@("tax/create/" + ProfileId)" class="btn btn-primary">Add tax configuration</NavLink>
-            </div>
-            <div>
-                <table class="table" style="width: 100%;">
-                    <thead>
-                    <tr>
-                        <th>Amount</th>
-                        <th>Tax Type</th>
-                        <th>Applies Before</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    @foreach (var tax in _taxes)
-                    {
-                        <tr>
-                            <td>@tax.Amount @(tax.IsPercentage ? "%" : "")</td>
-                            <td>@tax.TaxType</td>
-                            <td>@tax.AppliesBefore</td>
-                            <td style="display: flex; justify-content: space-between; width: 120px;">
-                                <NavLink class="btn btn-warning" style="margin-right: 5px;" href="@("tax/edit/" + ProfileId + "/" + tax.Id)">Edit</NavLink>
-                                <button class="btn btn-danger" style="margin-left: 5px;" onclick="@(() => HandleTaxDeleteAsync(tax.Id))">Delete</button>
-                            </td>
-                        </tr>
-                    }
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <TaxGrid ProfileId="@ProfileId" />
     </div>
 </div>
 
@@ -93,25 +62,10 @@
     
     public TaxProfile _profile = new();
     private Dictionary<Guid, string>? _currencies;
-    private List<Tax> _taxes = new();
 
     protected override async Task OnInitializedAsync()
     {
         _profile = await _webApi.GetOneAsync<TaxProfile>($"TaxProfile/one?TaxProfileId={ProfileId}");
-        var taxes = await _webApi.GetManyAsync<Tax>($"Tax?ProfileId={ProfileId}");
-        _taxes.AddRange(taxes);
-        
         _currencies = _identifierService.Currencies.ToDictionary();
     }
-
-    private async Task HandleTaxDeleteAsync(Guid id)
-    {
-        var result = await _webApi.Remove($"Tax?TaxId={id}");
-        if (result.RecordId != null)
-        {
-            _taxes = _taxes.Where(x => x.Id != id).ToList();
-            StateHasChanged();
-        }
-    }
-    
 }
