--- a/TaxCalculator.WebFrontend/Shared/FormInputs/ButtonSubmit.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/ButtonSubmit.razor
@@ -1,9 +1,12 @@
-﻿<div style="margin: 5px">
-    <button type="submit" class="btn btn-primary">@(Label ?? "Save")</button>
+﻿<div style="margin: 5px; display: flex; flex-direction: row-reverse;">
+    <button type="submit" class="btn btn-primary" disabled="@(!IsEnabled)">@(Label ?? "Save")</button>
 </div>
 
 @code {
     
     [Parameter]
     public string? Label { get; set; }
+    
+    [Parameter]
+    public bool IsEnabled { get; set; } = true;
 }
