--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileCreate.razor
@@ -1,7 +1,9 @@
 ﻿@page "/tax-profile/create"
+
 @using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.Application.TaxProfiles.Commands
 @using TaxCalculator.Domain.Services.Identifier
+@using TaxCalculator.WebFrontend.Shared.FormInputs
 
 @inject WebApi _webApi;
 @inject NavigationManager _navigationManager;
@@ -11,38 +13,13 @@
     <div>
         <h3>Create new profile</h3>
     </div>
-    
+    <br />
     <div>
         <EditForm Model="@_createTaxProfileCommand" OnValidSubmit="@HandleSubmitAsync">
-            <div style="margin: 5px">
-                <h6>Name</h6>
-                <InputText name="name" class="form-control" @bind-Value=_createTaxProfileCommand.Name />
-            </div>
-            <div style="margin: 5px">
-                <h6>Description</h6>
-                <InputTextArea name="description"
-                               class="form-control"
-                               cols="30"
-                               rows="5"
-                               @bind-Value=_createTaxProfileCommand.Description>
-                </InputTextArea>
-            </div>
-            <div style="margin: 5px">
-                <h6>Profile currency</h6>
-                <InputSelect class="form-control" @bind-Value=_createTaxProfileCommand.ProfileCurrencyId>
-                    <option selected="selected">Select currency</option>
-                    @if (_currencies != null)
-                    {
-                        @foreach (var currency in _currencies)
-                        {
-                            <option value="@currency.Key">@currency.Value</option>
-                        }
-                    }
-                </InputSelect>
-            </div>
-            <div style="margin: 5px">
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
+            <TextInput Label="Name" @bind-Value="_createTaxProfileCommand.Name" />
+            <TextAreaInput Label="Description" @bind-Value="_createTaxProfileCommand.Description"/>
+            <SelectInput Label="Profile currency" DefaultOption="Select currency" Data="_currencies" @bind-Value="_createTaxProfileCommand.ProfileCurrencyId"/>
+            <ButtonSubmit />
         </EditForm>
     </div>
 </div>
@@ -61,7 +38,7 @@
         var result = await _webApi.Create(_createTaxProfileCommand, "TaxProfile");
         if (result.RecordId != null)
         {
-            _navigationManager.NavigateTo($"tax-profile/view/{result.RecordId}");
+            _navigationManager.NavigateTo($"tax-profile/details/{result.RecordId}");
         }
     }
 }
