--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
@@ -2,7 +2,7 @@
 
 @using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.WebFrontend.Models
-@using System.Reflection
+@using TaxCalculator.WebFrontend.Shared.FormInputs
 @using TaxCalculator.Domain.Enums
 
 @inject WebApi _webApi
@@ -12,37 +12,14 @@
     <div>
         <h3>Create tax configuration</h3>
     </div>
+    <br />
     <div>
         <EditForm Model="@CreateTaxModel" OnSubmit="@HandleSubmitAsync">
-            <div style="margin: 5px; display: flex; justify-content: space-between;">
-                <h6 style="width: 150px">Amount</h6>
-                <InputText class="form-control" @bind-Value=CreateTaxModel.Amount />
-            </div>
-            <br />
-            <div style="margin: 5px; display: flex; justify-content: space-between;">
-                <h6 style="width: 150px">Applies before</h6>
-                <InputText class="form-control" @bind-Value=CreateTaxModel.AppliesBefore />
-            </div>
-            <br />
-            <div style="margin: 5px; display: flex; justify-content: flex-start;">
-                <h6 style="width: 150px">Is Percentage</h6>
-                <InputCheckbox @bind-Value=CreateTaxModel.IsPercentage />
-            </div>
-            <br />
-            <div style="margin: 5px; display: flex; justify-content: flex-start;">
-                <h6 style="width: 150px">Tax type</h6>
-                <InputSelect @bind-Value=CreateTaxModel.TaxType class="form-control">
-                    <option value="null" selected="selected" disabled="disabled">Select tax type</option>
-                    @foreach (var type in TaxTypes)
-                    {
-                        <option value="@type.Key">@type.Value</option>
-                    }
-                </InputSelect>
-            </div>
-            <br />
-            <div style="margin: 5px">
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
+            <TextInput Label="Amount" @bind-Value="CreateTaxModel.Amount"/>
+            <TextInput Label="Applies before" @bind-Value="CreateTaxModel.AppliesBefore"/>
+            <CheckBoxInput Label="Is Percentage" @bind-Value="CreateTaxModel.IsPercentage"/>
+            <SelectInput Label="Tax type" DefaultOption="Select tax type" Data="@TaxTypes" />
+            <ButtonSubmit />
         </EditForm>  
     </div>
 </div>
