--- a/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
@@ -2,11 +2,14 @@
 
 <div style="margin: 5px; display: flex; justify-content: flex-start; align-items: baseline">
     <h6 style="width: 150px">@Label</h6>
-    <InputSelect @bind-Value=@Value class="form-control">
+    <InputSelect @bind-Value=@Value class="form-control" disabled="@(!IsEnabled)">
         <option value="null" selected="selected" disabled="disabled">@DefaultOption</option>
-        @foreach (var item in Data)
+        @if (Data != null && Data.Any())
         {
-            <option value="@item.Key">@item.Value</option>
+            @foreach (var item in Data)
+            {
+                <option value="@item.Key">@item.Value</option>
+            }
         }
     </InputSelect>
 </div>
@@ -22,7 +25,7 @@
     public string DefaultOption { get; set; }
 
     [Parameter]
-    public Dictionary<TKey, string> Data { get; set; }
+    public Dictionary<TKey, string>? Data { get; set; }
 
     [Parameter] 
     public TKey Value 
@@ -43,4 +46,7 @@
     
     [Parameter]
     public EventCallback<TKey> ValueChanged { get; set; }
+    
+    [Parameter]
+    public bool IsEnabled { get; set; } = true;
 }
