--- a/TaxCalculator.WebFrontend/Shared/FormInputs/TextInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/TextInput.razor
@@ -1,35 +1,31 @@
-﻿<div style="margin: 5px; display: flex; justify-content: space-between; align-items: baseline;">
+﻿@using System.Linq.Expressions
+
+@inherits InputText
+
+<div style="margin: 5px; display: flex; justify-content: space-between; align-items: baseline;">
     <h6 style="width: 150px">@Label</h6>
-    <InputText class="form-control" @bind-Value=@Value disabled="@(!IsEnabled)" />
+    <div style="width: 100%">
+        <input @attributes="AdditionalAttributes"
+               class="form-control"
+               @bind=@CurrentValueAsString
+               @bind:event="oninput"
+               disabled="@(!IsEnabled)" />
+        
+        @if (MessageFor != null)
+        {
+            <ValidationMessage For="@MessageFor"/>
+        }
+    </div>
 </div>
 <br/>
 
 @code {
-    private string _value;
-    
     [Parameter]
     public string Label { get; set; }
     
-    [Parameter] 
-    public string Value 
-    { 
-        get => _value; 
-        set
-        {
-            if(value == _value)
-                return;
-
-            _value = value;  
-            if(ValueChanged.HasDelegate)
-            {
-                ValueChanged.InvokeAsync(_value);
-            }  
-        }
-    }
-    
-    [Parameter]
-    public EventCallback<string> ValueChanged { get; set; }
-
     [Parameter]
     public bool IsEnabled { get; set; } = true;
+    
+    [Parameter]
+    public Expression<Func<string>>? MessageFor { get; set; }
 }
