added numeric validation rule

--- a/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
+++ b/TaxCalculator.WebFrontend/Shared/FormInputs/SelectInput.razor
@@ -3,7 +3,7 @@
 @using System.Linq.Expressions
 @typeparam TValue
 
-<div style="margin: 5px; display: flex; justify-content: flex-start; align-items: baseline">
+<div style="margin: 5px; display: flex; justify-content: space-between; align-items: baseline">
     <h6 style="width: 150px">@Label</h6>
     <div style="width: 100%">
         <select @bind=@Value
