--- a/TaxCalculator.WebFrontend/Pages/Incomes/IncomeGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/Incomes/IncomeGrid.razor
@@ -1,4 +1,4 @@
-﻿@page "/income/{ProfileId}"
+﻿@page "/manage-incomes/{ProfileId}"
 
 @using TaxCalculator.Domain.Entities
 @using TaxCalculator.WebFrontend.Data
