--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -14,7 +14,7 @@
     <div style="display: flex; justify-content: space-between;">
         <h3>View profile details</h3>
         <div style="box-sizing: border-box;">
-            <NavLink href="@("income/" + ProfileId)" class="btn btn-primary">Manage incomes</NavLink>
+            <NavLink href="@("manage-incomes/" + ProfileId)" class="btn btn-primary">Manage incomes</NavLink>
             <a href="#" class="btn btn-primary">Manage additional spends</a>
         </div>
     </div>
