added additional spends grid

--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -15,7 +15,7 @@
         <h3>View profile details</h3>
         <div style="box-sizing: border-box;">
             <NavLink href="@("manage-incomes/" + ProfileId)" class="btn btn-primary">Manage incomes</NavLink>
-            <a href="#" class="btn btn-primary">Manage additional spends</a>
+            <NavLink href="@("/manage-additional-spends/" + ProfileId)" class="btn btn-primary">Manage additional spends</NavLink>
         </div>
     </div>
     <br/>
