--- a/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
+++ b/TaxCalculator.WebFrontend/Pages/TaxProfiles/TaxProfileDetails.razor
@@ -23,8 +23,7 @@
         <div>
             <EditForm Model="@Profile">
                 <TextInput Label="Name" @bind-Value="Profile.Name"
-                           IsEnabled="IsFormEnabled"
-                           TValue="string" />
+                           IsEnabled="IsFormEnabled" />
                 
                 <TextAreaInput Label="Description" 
                                @bind-Value="Profile.Description"
