--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
@@ -3,6 +3,7 @@
 @using TaxCalculator.WebFrontend.Data
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Shared.FormInputs
+@using TaxCalculator.WebFrontend.Validation
 @using TaxCalculator.Domain.Enums
 
 @inject WebApi _webApi
