additional spend create

--- a/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendGrid.razor
+++ b/TaxCalculator.WebFrontend/Pages/AdditionalSpends/AdditionalSpendGrid.razor
@@ -16,7 +16,7 @@ else
     <div>
         <div style="display: flex; justify-content: space-between;">
             <h3>Manage additional spends</h3>
-            <NavLink href="#" class="btn btn-primary">Add</NavLink>
+            <NavLink href="@("/manage-additional-spends/" + ProfileId + "/add")" class="btn btn-primary">Add</NavLink>
         </div>
         <br/>
         <div>
